# chatgpt_telegram_bot

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_docker_image.yml
bot/: __init__.py  bot.py  chatgpt.py  config.py  database.py  settings.py
config/: config.example.yml
static/donate/: donate.md
